--- a/kube/deploy/scheduler_deploy.yml
+++ b/kube/deploy/scheduler_deploy.yml
@@ -1,100 +1,50 @@
-{
-  "kind": "Deployment",
-  "apiVersion": "extensions/v1beta1",
-  "metadata": {
-    "name": "scheduler",
-    "namespace": "default",
-    "selfLink": "/apis/extensions/v1beta1/namespaces/default/deployments/scheduler",
-    "uid": "5bc44a5a-7202-11e8-bfa1-080027384646",
-    "resourceVersion": "13799",
-    "generation": 1,
-    "creationTimestamp": "2018-06-17T07:45:08Z",
-    "labels": {
-      "run": "scheduler"
-    },
-    "annotations": {
-      "deployment.kubernetes.io/revision": "1"
-    }
-  },
-  "spec": {
-    "replicas": 1,
-    "selector": {
-      "matchLabels": {
-        "run": "scheduler"
-      }
-    },
-    "template": {
-      "metadata": {
-        "creationTimestamp": null,
-        "labels": {
-          "run": "scheduler"
-        }
-      },
-      "spec": {
-        "containers": [
-          {
-            "name": "scheduler",
-            "image": "puckel/docker-airflow:1.9.0-4",
-            "command": [
-              "/entrypoint.sh",
-              "scheduler"
-            ],
-            "ports": [
-              {
-                "containerPort": 5555,
-                "protocol": "TCP"
-              }
-            ],
-            "env": [
-              {
-                "name": "LOAD_EX",
-                "value": "n"
-              },
-              {
-                "name": "FERNET_KEY",
-                "value": "46BKJoQYlPPOexq0OhDZnIlNepKFf87WFwLbfzqDDho="
-              },
-              {
-                "name": "EXECUTOR",
-                "value": "Celery"
-              }
-            ],
-            "resources": {},
-            "terminationMessagePath": "/dev/termination-log",
-            "terminationMessagePolicy": "File",
-            "imagePullPolicy": "IfNotPresent"
-          }
-        ],
-        "restartPolicy": "Always",
-        "terminationGracePeriodSeconds": 30,
-        "dnsPolicy": "ClusterFirst",
-        "securityContext": {},
-        "schedulerName": "default-scheduler"
-      }
-    },
-    "strategy": {
-      "type": "RollingUpdate",
-      "rollingUpdate": {
-        "maxUnavailable": 1,
-        "maxSurge": 1
-      }
-    }
-  },
-  "status": {
-    "observedGeneration": 1,
-    "replicas": 1,
-    "updatedReplicas": 1,
-    "readyReplicas": 1,
-    "availableReplicas": 1,
-    "conditions": [
-      {
-        "type": "Available",
-        "status": "True",
-        "lastUpdateTime": "2018-06-17T07:45:09Z",
-        "lastTransitionTime": "2018-06-17T07:45:09Z",
-        "reason": "MinimumReplicasAvailable",
-        "message": "Deployment has minimum availability."
-      }
-    ]
-  }
-}
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  annotations:
+    deployment.kubernetes.io/revision: "1"
+  creationTimestamp: null
+  generation: 1
+  labels:
+    run: scheduler
+  name: scheduler
+  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/scheduler
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      run: scheduler
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
+    type: RollingUpdate
+  template:
+    metadata:
+      creationTimestamp: null
+      labels:
+        run: scheduler
+    spec:
+      containers:
+      - command:
+        - /entrypoint.sh
+        - scheduler
+        env:
+        - name: LOAD_EX
+          value: "n"
+        - name: FERNET_KEY
+          value: 46BKJoQYlPPOexq0OhDZnIlNepKFf87WFwLbfzqDDho=
+        - name: EXECUTOR
+          value: Celery
+        image: puckel/docker-airflow:1.9.0-4
+        imagePullPolicy: IfNotPresent
+        name: scheduler
+        resources: {}
+        terminationMessagePath: /dev/termination-log
+        terminationMessagePolicy: File
+      dnsPolicy: ClusterFirst
+      restartPolicy: Always
+      schedulerName: default-scheduler
+      securityContext: {}
+      terminationGracePeriodSeconds: 30
+status: {}
