--- a/kube/deploy/worker_deploy.yml
+++ b/kube/deploy/worker_deploy.yml
@@ -1,106 +1,57 @@
-{
-  "kind": "Deployment",
-  "apiVersion": "extensions/v1beta1",
-  "metadata": {
-    "name": "worker",
-    "namespace": "default",
-    "selfLink": "/apis/extensions/v1beta1/namespaces/default/deployments/worker",
-    "uid": "e3ce2657-71c8-11e8-9e49-080027c4eb60",
-    "resourceVersion": "855",
-    "generation": 1,
-    "creationTimestamp": "2018-06-17T00:53:46Z",
-    "labels": {
-      "run": "worker"
-    },
-    "annotations": {
-      "deployment.kubernetes.io/revision": "1"
-    }
-  },
-  "spec": {
-    "replicas": 1,
-    "selector": {
-      "matchLabels": {
-        "run": "worker"
-      }
-    },
-    "template": {
-      "metadata": {
-        "creationTimestamp": null,
-        "labels": {
-          "run": "worker"
-        }
-      },
-      "spec": {
-        "containers": [
-          {
-            "name": "worker",
-            "image": "anelen/datasci",
-            "ports": [
-              {
-                "containerPort": 8000,
-                "hostPort": 8000,
-                "protocol": "TCP"
-              },
-              {
-                "containerPort": 8787,
-                "hostPort": 8787,
-                "protocol": "TCP"
-              },
-              {
-                "containerPort": 8793,
-                "hostPort": 8793,
-                "protocol": "TCP"
-              }
-            ],
-            "env": [
-               {
-                "name": "EXECUTOR",
-                "value": "Celery"
-              },              
-              {
-                "name": "USER_NAME",
-                "value": "ds"
-              },
-              {
-                "name": "USER_PASSWORD",
-                "value": "ds"
-              }
-            ],
-            "resources": {},
-            "terminationMessagePath": "/dev/termination-log",
-            "terminationMessagePolicy": "File",
-            "imagePullPolicy": "Always"
-          }
-        ],
-        "restartPolicy": "Always",
-        "terminationGracePeriodSeconds": 30,
-        "dnsPolicy": "ClusterFirst",
-        "securityContext": {},
-        "schedulerName": "default-scheduler"
-      }
-    },
-    "strategy": {
-      "type": "RollingUpdate",
-      "rollingUpdate": {
-        "maxUnavailable": 1,
-        "maxSurge": 1
-      }
-    }
-  },
-  "status": {
-    "observedGeneration": 1,
-    "replicas": 1,
-    "updatedReplicas": 1,
-    "unavailableReplicas": 1,
-    "conditions": [
-      {
-        "type": "Available",
-        "status": "True",
-        "lastUpdateTime": "2018-06-17T00:53:46Z",
-        "lastTransitionTime": "2018-06-17T00:53:46Z",
-        "reason": "MinimumReplicasAvailable",
-        "message": "Deployment has minimum availability."
-      }
-    ]
-  }
-}
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  annotations:
+    deployment.kubernetes.io/revision: "1"
+  creationTimestamp: null
+  generation: 1
+  labels:
+    run: worker
+  name: worker
+  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/worker
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      run: worker
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
+    type: RollingUpdate
+  template:
+    metadata:
+      creationTimestamp: null
+      labels:
+        run: worker
+    spec:
+      containers:
+      - env:
+        - name: EXECUTOR
+          value: Celery
+        - name: USER_NAME
+          value: ds
+        - name: USER_PASSWORD
+          value: ds
+        image: anelen/datasci
+        imagePullPolicy: Always
+        name: worker
+        ports:
+        - containerPort: 8000
+          hostPort: 8000
+          protocol: TCP
+        - containerPort: 8787
+          hostPort: 8787
+          protocol: TCP
+        - containerPort: 8793
+          hostPort: 8793
+          protocol: TCP
+        resources: {}
+        terminationMessagePath: /dev/termination-log
+        terminationMessagePolicy: File
+      dnsPolicy: ClusterFirst
+      restartPolicy: Always
+      schedulerName: default-scheduler
+      securityContext: {}
+      terminationGracePeriodSeconds: 30
+status: {}
