--- a/kube/service/postgres_service.yml
+++ b/kube/service/postgres_service.yml
@@ -7,15 +7,14 @@ metadata:
   name: postgres
   selfLink: /api/v1/namespaces/default/services/postgres
 spec:
-  externalTrafficPolicy: Cluster
   ports:
-  - nodePort: 31432
+  - name: postgres
     port: 5432
     protocol: TCP
     targetPort: 5432
   selector:
     run: postgres
   sessionAffinity: None
-  type: LoadBalancer
+  type: ClusterIP
 status:
   loadBalancer: {}
