Make worker accessible from bastion only

--- a/kube/deploy/worker_deploy.yml
+++ b/kube/deploy/worker_deploy.yml
@@ -37,6 +37,9 @@ spec:
         imagePullPolicy: Always
         name: worker
         ports:
+        - containerPort: 22
+          hostPort: 22
+          protocol: TCP
         - containerPort: 8000
           hostPort: 8000
           protocol: TCP
