--- a/kube/deploy/worker_deploy.yml
+++ b/kube/deploy/worker_deploy.yml
@@ -42,6 +42,9 @@ spec:
         image: anelen/datasci
         imagePullPolicy: Always
         name: worker
+        volumeMounts:
+        - mountPath: /usr/local/airflow
+          name: dag-volume
         ports:
         - containerPort: 8793
           hostPort: 8793
@@ -49,6 +52,10 @@ spec:
         resources: {}
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
+      volumes:
+      - name: dag-volume
+        gitRepo:
+          repository: "https://<some_token>@github.com/<your_org>/<your_repo>.git"
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
