Add dags git volume to Airflow deploys

--- a/kube/deploy/webserver_deploy.yml
+++ b/kube/deploy/webserver_deploy.yml
@@ -45,6 +45,13 @@ spec:
         resources: {}
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
+        volumeMounts:
+        - mountPath: /usr/local/airflow
+          name: dags-volume
+      volumes:
+      - name: dags-volume
+        gitRepo:
+          repository: "https://<some_token>@github.com/<your_org>/<your_repo>.git"
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
