--- a/kube/deploy/airflow/worker_deploy.yml
+++ b/kube/deploy/airflow/worker_deploy.yml
@@ -6,14 +6,14 @@ metadata:
   creationTimestamp: null
   generation: 1
   labels:
-    run: scheduler
-  name: scheduler
-  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/scheduler
+    run: worker
+  name: worker
+  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/worker
 spec:
   replicas: 1
   selector:
     matchLabels:
-      run: scheduler
+      run: worker
   strategy:
     rollingUpdate:
       maxSurge: 1
@@ -23,32 +23,39 @@ spec:
     metadata:
       creationTimestamp: null
       labels:
-        run: scheduler
+        run: worker
     spec:
       containers:
-      - command:
-        - /entrypoint.sh
-        - scheduler
-        env:
-        - name: LOAD_EX
-          value: "n"
-        - name: FERNET_KEY
-          value: 46BKJoQYlPPOexq0OhDZnIlNepKFf87WFwLbfzqDDho=
+      - env:
         - name: EXECUTOR
           value: Celery
-        image: puckel/docker-airflow:1.9.0-4
-        imagePullPolicy: IfNotPresent
-        name: scheduler
+        - name: USER_NAME
+          value: ds
+        - name: USER_PASSWORD
+          value: ds
+        - name: START_JUPYTERHUB
+          value: "no"
+        - name: START_RSTUDIO
+          value: "no"
+        - name: START_AIRFLOW
+          value: "yes"
+        image: anelen/datasci
+        imagePullPolicy: Always
+        name: worker
+        ports:
+        - containerPort: 8793
+          hostPort: 8793
+          protocol: TCP
         resources: {}
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         volumeMounts:
-        - mountPath: /usr/local/airflow
+        - mountPath: /usr/local/airflow/dags
           name: dags-volume
       volumes:
       - name: dags-volume
         gitRepo:
-          repository: "https://<some_token>@github.com/<your_org>/<your_repo>.git"
+          repository: "https://<some_token>@github.com/<your_account>/<your_dags_repo>.git"
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
