--- a/kube/deploy/airflow/webserver_deploy.yml
+++ b/kube/deploy/airflow/webserver_deploy.yml
@@ -47,11 +47,13 @@ spec:
         terminationMessagePolicy: File
         volumeMounts:
         - mountPath: /usr/local/airflow/dags
-          name: dags-volume
+          name: data-volume
+          subPath: dags
       volumes:
-      - name: dags-volume
-        gitRepo:
-          repository: "https://<some_token>@github.com/<your_account>/<your_dags_repo>.git"
+      - name: data-volume
+        gcePersistentDisk:
+        pdName: data
+        fsType: ext4
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
