--- a/kube/deploy/airflow/flower_deploy.yml
+++ b/kube/deploy/airflow/flower_deploy.yml
@@ -32,6 +32,8 @@ spec:
         env:
         - name: EXECUTOR
           value: Celery
+        - name: AIRFLOW__CORE__DONOT_PICKLE
+          value: True
         image: puckel/docker-airflow:1.9.0-4
         imagePullPolicy: IfNotPresent
         name: flower
