--- a/kube/deploy/airflow/worker_deploy.yml
+++ b/kube/deploy/airflow/worker_deploy.yml
@@ -29,6 +29,10 @@ spec:
       - env:
         - name: EXECUTOR
           value: Celery
+        - name: LOAD_EX
+          value: "n"
+        - name: FERNET_KEY
+          value: 46BKJoQYlPPOexq0OhDZnIlNepKFf87WFwLbfzqDDho=
         - name: USER_NAME
           value: ds
         - name: USER_PASSWORD
