--- a/kube/deploy/sshtunnel/bastion_deploy.yml
+++ b/kube/deploy/sshtunnel/bastion_deploy.yml
@@ -29,6 +29,7 @@ spec:
       - image: moul/sshportal:v1.8.0
         imagePullPolicy: IfNotPresent
         name: bastion
+        workingDir: /var/sshportal
         ports:
         - containerPort: 2222
           protocol: TCP
@@ -36,7 +37,7 @@ spec:
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         volumeMounts:
-        - mountPath: /
+        - mountPath: /var/sshportal
           name: sshportal-root-volume
       volumes:
       - name: sshportal-root-volume
