--- a/swarm/docker-compose-CeleryExecutor-swarm.yml
+++ b/swarm/docker-compose-CeleryExecutor-swarm.yml
@@ -9,6 +9,10 @@ services:
           placement:
             constraints:
             - node.hostname == master-node
+        # log_driver: "json-file"
+        log_opt:
+          max-size: "25M"
+          max-file: "7"
     postgres:
         image: postgres:9.6
         env_file: .env 
@@ -23,6 +27,10 @@ services:
           placement:
             constraints:
             - node.hostname == master-node
+        # log_driver: "json-file"
+        log_opt:
+          max-size: "25M"
+          max-file: "7"
 
     webserver:
         image: puckel/docker-airflow:1.9.0-4
@@ -52,6 +60,10 @@ services:
           placement:
             constraints:
             - node.hostname == master-node
+        # log_driver: "json-file"
+        log_opt:
+          max-size: "25M"
+          max-file: "20"  # Webserver log is very chatty by default
 
     flower:
         image: puckel/docker-airflow:1.9.0-4
@@ -70,6 +82,10 @@ services:
           placement:
             constraints:
             - node.hostname == master-node
+        # log_driver: "json-file"
+        log_opt:
+          max-size: "25M"
+          max-file: "7"
 
     scheduler:
         image: puckel/docker-airflow:1.9.0-4
@@ -92,6 +108,11 @@ services:
           placement:
             constraints:
             - node.hostname == master-node
+        # log_driver: "json-file"
+        log_opt:
+          max-size: "25M"
+          max-file: "7"
+
     worker:
         image: anelen/datasci
         restart: always
@@ -112,6 +133,11 @@ services:
           placement:
             constraints:
             - node.hostname == worker-node
+        # log_driver: "json-file"
+        log_opt:
+          max-size: "25M"
+          max-file: "7"
+
     suite:
         image: anelen/datasci
         restart: always
@@ -125,6 +151,10 @@ services:
             - START_RSTUDIO=yes
             - START_JUPYTERHUB=yes
             - START_AIRFLOW=no
+        # log_driver: "json-file"
+        log_opt:
+          max-size: "25M"
+          max-file: "7"
         deploy:
           mode: replicated
           replicas: 1
