--- a/kube/deploy/ldap/ldap.yml
+++ b/kube/deploy/ldap/ldap.yml
@@ -1,22 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: ldap-config
-data:
-  default.conf: |-
-    # Replace this default file:
-    server {
-        listen   80;
-            server_name  localhost;
-            root /usr/share/nginx/html;
-            location / {
-                index none;
-                autoindex on;
-                autoindex_exact_size off;
-                autoindex_localtime on;
-        }
-    }    
----
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -26,7 +7,7 @@ spec:
   template:
     metadata:
       labels:
-        app: datasci-ldap
+        app: ldap
     spec:
       containers:
       - name: openldap
@@ -34,32 +15,25 @@ spec:
         ports:
           - containerPort: 389
           - containerPort: 636
-        volumeMounts:
-        - name: nfs
-          mountPath: /var/lib/ldap
-        - name: config-volume
-          mountPath: "/etc/ldap/slapd.d"
+        env:
+        - name: LDAP_ADMIN_PASSWORD
+          value: "admin"
       - name: phpldapadmin
         image: osixia/phpldapadmin
         ports:
           - containerPort: 80
+        # DN: cn=admin,dc=example,dc=org
+        # password: admin
         env:
         - name: PHPLDAPADMIN_HTTPS
           value: "false"
         - name: PHPLDAPADMIN_LDAP_HOSTS
           value: localhost
-      volumes:
-      - name: nfs
-        persistentVolumeClaim:
-          claimName: datasci-volume
-      - name: config-volume
-        configMap:
-          name: ldap-config
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: datasci-ldap
+  name: ldap
 spec:
   ports:
   - name: ldap
@@ -68,17 +42,10 @@ spec:
   - name: ldap-ssl
     port: 636
     targetPort: 636
-  selector:
-    app: datasci-ldap
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: datasci-ldap-admin
-spec:
-  type: LoadBalancer
-  ports:
-  - port: 80
+  - name: ldap-admin
+    port: 8888
     targetPort: 80
+    protocol: TCP
   selector:
-    app: datasci-ldap
+    app: ldap
+  type: ClusterIP
